[package]
name = "bank_core_surrounds"
version = "0.1.2"
authors = ["Michael Chermside <mcherm@mcherm.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
csv = "1.1.6"
html-escape = "0.2.11"
wasm-bindgen = "0.2" # for WASM integration
prog_draw = {version = "0.1.2", path = "../prog_draw_rust"}
