[package]
name = "bank_core_surrounds"
version = "0.1.2"
authors = ["Michael Chermside <mcherm@mcherm.com>"]
edition = "2021"
description = "Code used to generate a rather fancy dynamic HTML diagram from input date."
repository = "https://github.com/mcherm/prog_draw"
license ="Apache-2.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
csv = "1.1.6"
html-escape = "0.2.11"
wasm-bindgen = "0.2" # for WASM integration
prog_draw = {version = "0.1.2", path = "../prog_draw_rust"}
calamine = "0.18.0" # to read excel files
serde = {version = "1.0.145", features = ["derive"]}  # to read excel files
