[package]
name = "prog-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "^0.9.1"
rusttype = "0.9.2"
lazy_static = "1.4.0"
num = "0.4.0" # for tidy_tree
tinyset = "0.4.14" # for tidy_tree
itertools = "0.10.3"
csv = "1.1.6"
