[package]
name = "prog-draw"
version = "0.1.1"
authors = ["Michael Chermside <mcherm@mcherm.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusttype = "0.9.2"
lazy_static = "1.4.0"
num = "0.4.0" # for tidy_tree
itertools = "0.10.3"
csv = "1.1.6"
wasm-bindgen = "0.2" # for WASM integration
