[package]
name = "prog_draw"
version = "0.1.2"
authors = ["Michael Chermside <mcherm@mcherm.com>"]
edition = "2021"
description = "The reusable portion of code I wrote to draw some trees to a web page."
repository = "https://github.com/mcherm/prog_draw"
license ="Apache-2.0"


[dependencies]
rusttype = "0.9.2"
lazy_static = "1.4.0"
num = "0.4.0" # for tidy_tree
